--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,10 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter')
 
     compile("org.springframework.boot:spring-boot-starter-actuator")
-
+    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.1.1.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.1.1.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.1.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.0.RELEASE'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6"
     compile group: 'org.springframework.cloud', name: 'spring-cloud-gateway-mvc', version: '2.0.2.RELEASE'
